--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -24,6 +23,10 @@
         </activity>
         <activity
             android:name=".AudioPlayerActivity"
+            android:label="@string/title_activity_audio_player" >
+        </activity>
+        <activity
+            android:name=".FullScreenVideoPlayerActivity"
             android:label="@string/title_activity_audio_player" >
         </activity>
 
