--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 dependencies {
     compile project(':library')
     compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 android {
