Fixed an issue where FitsSystemWindowRelativeLayout wouldn't correctly resize when switching between HIDE_NAVIGATION in landscape and VISIBLE in portrait

--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -22,10 +22,12 @@
         </activity>
         <activity
             android:name=".ui.activity.VideoPlayerActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_video_player">
         </activity>
         <activity
             android:name=".ui.activity.FullScreenVideoPlayerActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_video_player">
         </activity>
         <activity
