--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     // Playlist support
-    compile 'com.devbrackets.android:playlistcore:1.0.0-SNAPSHOT'
+    compile 'com.devbrackets.android:playlistcore:1.0.0'
 }
 
 android {
