--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile project(':library')
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.android.exoplayer:extension-okhttp:r2.2.0'
 
     // Playlist support
     compile 'com.devbrackets.android:playlistcore:1.1.1'
