--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -3,8 +3,10 @@ apply plugin: 'com.android.application'
 dependencies {
     compile project(':library')
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.google.android.exoplayer:extension-okhttp:r2.3.0'
+    compile 'com.google.android.exoplayer:extension-okhttp:r2.3.1'
+
+    // Image Loading
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
     // Playlist support
     compile 'com.devbrackets.android:playlistcore:1.1.1'
@@ -22,7 +24,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
 
     lintOptions {
