--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.2'
         classpath 'com.novoda:bintray-release:0.5.0'
     }
 }
@@ -11,5 +12,6 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
