Updated the support library to `26.1.0`, ExoPlayer to `r2.5.3`, and the build tools to the `3.0.0` beta

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 
 dependencies {
     compile project(':library')
-    compile 'com.android.support:appcompat-v7:26.0.2'
-    compile 'com.google.android.exoplayer:extension-okhttp:r2.5.2'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.google.android.exoplayer:extension-okhttp:r2.5.3'
 
     // Image Loading
     compile 'com.github.bumptech.glide:glide:3.8.0'
@@ -17,7 +17,7 @@ dependencies {
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.devbrackets.android.exomediademo"
