--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,18 +1,20 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-    compile project(':library')
-    compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibVersion"
-    compile "com.google.android.exoplayer:extension-okhttp:$rootProject.ext.exoPlayerVersion"
+    implementation project(':library')
+    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportLibVersion"
+    implementation "com.android.support:support-media-compat:$rootProject.ext.supportLibVersion"
+    implementation "com.google.android.exoplayer:extension-okhttp:$rootProject.ext.exoPlayerVersion"
 
     // Image Loading
-    compile 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 
     // Playlist support
-    compile 'com.devbrackets.android:playlistcore:2.0.0'
+    implementation 'com.devbrackets.android:playlistcore:2.0.0'
 
     // Memory Leak diagnostics
-    compile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
 }
 
 android {
