--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -28,6 +28,11 @@ android {
         versionName "1.0.0"
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     lintOptions {
         abortOnError false
     }
