--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
-        classpath 'com.novoda:bintray-release:0.8.1'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
 }
 
@@ -18,5 +18,5 @@ allprojects {
 
 ext {
     exoPlayerVersion = "2.9.0"
-    supportLibVersion = "27.1.1"
+    supportLibVersion = "28.0.0"
 }
