--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlinVersion = '1.2.71'
+    ext.kotlinVersion = '1.3.10'
     repositories {
         google()
         jcenter()
@@ -11,6 +11,7 @@ buildscript {
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 
 dependencies {
@@ -41,6 +42,10 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0.0"
+    }
+
+    sourceSets {
+        main.java.srcDirs += "src/main/kotlin"
     }
 
     compileOptions {
