--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 dependencies {
     implementation project(':library')
 
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportLibVersion"
-    implementation "com.android.support:support-media-compat:$rootProject.ext.supportLibVersion"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.media:media:1.0.1'
     implementation "com.google.android.exoplayer:extension-okhttp:$rootProject.ext.exoPlayerVersion"
 
     // Image Loading
