--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -6,9 +6,12 @@ apply plugin: 'kotlin-android-extensions'
 dependencies {
     implementation project(':library')
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.media:media:1.0.1'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.media:media:1.1.0'
     implementation "com.google.android.exoplayer:extension-okhttp:$rootProject.ext.exoPlayerVersion"
+
+    // UI
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     // Image Loading
     implementation 'com.github.bumptech.glide:glide:4.9.0'
@@ -22,12 +25,12 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     defaultConfig {
         applicationId "com.devbrackets.android.exomediademo"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0.0"
     }
