--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 dependencies {
     implementation project(':library')
 
+    implementation 'androidx.core:core-ktx:1.5.0-rc01'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.media:media:1.3.0'
     implementation "com.google.android.exoplayer:extension-okhttp:$rootProject.ext.exoPlayerVersion"
