--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -4,48 +4,50 @@ apply plugin: 'kotlin-android-extensions'
 
 
 dependencies {
-    implementation project(':library')
+  implementation project(':library')
 
-    implementation 'androidx.core:core-ktx:1.5.0-rc01'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.media:media:1.3.0'
-    implementation "com.google.android.exoplayer:extension-okhttp:$rootProject.ext.exoPlayerVersion"
+  // ExoPlayer
+  implementation "com.google.android.exoplayer:exoplayer-ui:$rootProject.ext.exoPlayerVersion" // Subtitles
+  implementation "com.google.android.exoplayer:extension-okhttp:$rootProject.ext.exoPlayerVersion" // Custom HTTP
 
-    // UI
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+  // Misc
+  implementation 'androidx.core:core-ktx:1.6.0'
+  implementation 'androidx.appcompat:appcompat:1.3.1'
+  implementation 'androidx.media:media:1.4.1'
+  implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
-    // Image Loading
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+  // Image Loading
+  implementation 'com.github.bumptech.glide:glide:4.9.0'
+  annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
-    // Playlist support
-    implementation 'com.devbrackets.android:playlistcore:2.0.1'
+  // Playlist support
+  implementation 'com.devbrackets.android:playlistcore:2.0.1'
 
-    // Memory Leak diagnostics
-    implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+  // Memory Leak diagnostics
+  implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
 }
 
 android {
-    compileSdkVersion 30
+  compileSdkVersion 30
 
-    defaultConfig {
-        applicationId "com.devbrackets.android.exomediademo"
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0.0"
-    }
+  defaultConfig {
+    applicationId "com.devbrackets.android.exomediademo"
+    minSdkVersion 21
+    targetSdkVersion 30
+    versionCode 1
+    versionName "1.0.0"
+  }
 
-    sourceSets {
-        main.java.srcDirs += "src/main/kotlin"
-    }
+  sourceSets {
+    main.java.srcDirs += "src/main/kotlin"
+  }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
 
-    lintOptions {
-        abortOnError false
-    }
+  lintOptions {
+    abortOnError false
+  }
 }
