--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -13,27 +13,27 @@ dependencies {
   // Misc
   implementation 'androidx.core:core-ktx:1.6.0'
   implementation 'androidx.appcompat:appcompat:1.3.1'
-  implementation 'androidx.media:media:1.4.1'
+  implementation 'androidx.media:media:1.4.2'
   implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
   // Image Loading
-  implementation 'com.github.bumptech.glide:glide:4.9.0'
-  annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+  implementation 'com.github.bumptech.glide:glide:4.12.0'
+  annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
   // Playlist support
   implementation 'com.devbrackets.android:playlistcore:2.0.1'
 
   // Memory Leak diagnostics
-  implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+  debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 }
 
 android {
-  compileSdkVersion 30
+  compileSdkVersion 31
 
   defaultConfig {
     applicationId "com.devbrackets.android.exomediademo"
     minSdkVersion 21
-    targetSdkVersion 30
+    targetSdkVersion 31
     versionCode 1
     versionName "1.0.0"
   }
