--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
@@ -16,7 +16,8 @@
         android:name=".App">
         <activity
             android:name=".ui.activity.StartupActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -24,11 +25,6 @@
         </activity>
         <activity
             android:name=".ui.activity.VideoPlayerActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_video_player">
-        </activity>
-        <activity
-            android:name=".ui.activity.FullScreenVideoPlayerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_video_player">
         </activity>
@@ -44,7 +40,6 @@
             android:name=".ui.activity.AudioPlayerActivity"
             android:label="@string/title_activity_audio_player">
         </activity>
-
 
         <service
             android:name=".service.MediaService"
