--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+ext {
+  composeVersion = "1.0.3"
+}
 
 dependencies {
   implementation project(':library')
@@ -15,6 +18,18 @@ dependencies {
   implementation 'androidx.appcompat:appcompat:1.3.1'
   implementation 'androidx.media:media:1.4.2'
   implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+
+  // Jetpack Compose UI
+  implementation "androidx.compose.ui:ui:$composeVersion"
+  implementation "androidx.compose.ui:ui-tooling:$composeVersion"
+  implementation "androidx.compose.ui:ui-tooling-preview:$composeVersion"
+  implementation "androidx.compose.material:material:$composeVersion"
+  implementation "androidx.compose.material:material-icons-core:$composeVersion"
+  implementation "androidx.compose.material:material-icons-extended:$composeVersion"
+  implementation 'androidx.activity:activity-compose:1.3.1'
+  implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
+  implementation "com.google.accompanist:accompanist-navigation-animation:0.19.0"
+
 
   // Image Loading
   implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -42,9 +57,27 @@ android {
     main.java.srcDirs += "src/main/kotlin"
   }
 
+  kotlinOptions {
+    useIR = true
+    jvmTarget = JavaVersion.VERSION_1_8.toString()
+    freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
+    freeCompilerArgs += [
+        "-P",
+        "plugin:androidx.compose.compiler.plugins.kotlin:suppressKotlinVersionCompatibilityCheck=true"
+    ]
+  }
+
+  buildFeatures {
+    compose true
+  }
+
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
+  }
+
+  composeOptions {
+    kotlinCompilerExtensionVersion composeVersion
   }
 
   lintOptions {
