--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:usesCleartextTraffic="true"
         android:name=".App">
         <activity
-            android:name=".ui.activity.StartupActivity"
+            android:name=".ui.selection.SelectionActivity"
             android:label="@string/app_name"
             android:exported="true">
             <intent-filter>
@@ -23,26 +23,20 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".ui.activity.VideoPlayerActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:name=".ui.media.VideoPlayerActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/AppTheme.Video"
             android:label="@string/title_activity_video_player">
         </activity>
         <activity
-            android:name=".ui.activity.VideoSelectionActivity"
-            android:label="@string/title_activity_video_player">
-        </activity>
-        <activity
-            android:name=".ui.activity.AudioSelectionActivity"
-            android:label="@string/title_activity_audio_player">
-        </activity>
-        <activity
-            android:name=".ui.activity.AudioPlayerActivity"
+            android:name=".ui.media.AudioPlayerActivity"
             android:label="@string/title_activity_audio_player">
         </activity>
 
         <service
-            android:name=".service.MediaService"
+            android:name="com.devbrackets.android.exomediademo.playlist.service.MediaService"
             android:enabled="true"
             android:exported="false">
         </service>
