--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 ext {
-  composeVersion = "1.0.3"
+  composeVersion = "1.0.5"
 }
 
 dependencies {
@@ -14,9 +14,9 @@ dependencies {
   implementation "com.google.android.exoplayer:extension-okhttp:$rootProject.ext.exoPlayerVersion" // Custom HTTP
 
   // Misc
-  implementation 'androidx.core:core-ktx:1.6.0'
+  implementation 'androidx.core:core-ktx:1.7.0'
   implementation 'androidx.appcompat:appcompat:1.3.1'
-  implementation 'androidx.media:media:1.4.2'
+  implementation 'androidx.media:media:1.4.3'
   implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
   // Jetpack Compose UI
@@ -26,9 +26,9 @@ dependencies {
   implementation "androidx.compose.material:material:$composeVersion"
   implementation "androidx.compose.material:material-icons-core:$composeVersion"
   implementation "androidx.compose.material:material-icons-extended:$composeVersion"
-  implementation 'androidx.activity:activity-compose:1.3.1'
-  implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
-  implementation "com.google.accompanist:accompanist-navigation-animation:0.19.0"
+  implementation 'androidx.activity:activity-compose:1.4.0'
+  implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
+  implementation "com.google.accompanist:accompanist-navigation-animation:0.20.2"
 
 
   // Image Loading
