Added missing jdk distribution

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,6 +15,7 @@ jobs:
       - name: "Setup JDK"
         uses: actions/setup-java@v2
         with:
+          distribution: 'temurin'
           java-version: '11'
           cache: 'gradle'
       - name: "Build & Test"
