--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,9 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 ext {
-  composeVersion = "1.0.5"
+  composeVersion = "1.1.1"
 }
 
 dependencies {
@@ -15,8 +14,8 @@ dependencies {
 
   // Misc
   implementation 'androidx.core:core-ktx:1.7.0'
-  implementation 'androidx.appcompat:appcompat:1.3.1'
-  implementation 'androidx.media:media:1.4.3'
+  implementation 'androidx.appcompat:appcompat:1.4.1'
+  implementation 'androidx.media:media:1.6.0'
   implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
   // Jetpack Compose UI
@@ -27,8 +26,8 @@ dependencies {
   implementation "androidx.compose.material:material-icons-core:$composeVersion"
   implementation "androidx.compose.material:material-icons-extended:$composeVersion"
   implementation 'androidx.activity:activity-compose:1.4.0'
-  implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
-  implementation "com.google.accompanist:accompanist-navigation-animation:0.20.2"
+  implementation "androidx.navigation:navigation-compose:2.4.2"
+  implementation "com.google.accompanist:accompanist-navigation-animation:0.23.1"
 
 
   // Image Loading
@@ -36,7 +35,7 @@ dependencies {
   annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
   // Playlist support
-  implementation 'com.devbrackets.android:playlistcore:2.0.1'
+  implementation 'com.devbrackets.android:playlistcore:2.1.0'
 
   // Memory Leak diagnostics
   debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
@@ -69,6 +68,7 @@ android {
 
   buildFeatures {
     compose true
+    viewBinding true
   }
 
   compileOptions {
