--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -9,12 +9,12 @@ dependencies {
   implementation project(':library')
 
   // ExoPlayer
-  implementation "com.google.android.exoplayer:exoplayer-ui:$rootProject.ext.exoPlayerVersion" // Subtitles
-  implementation "com.google.android.exoplayer:extension-okhttp:$rootProject.ext.exoPlayerVersion" // Custom HTTP
+  implementation "androidx.media3:media3-ui:$rootProject.ext.media3Version" // Subtitles
+  implementation "androidx.media3:media3-datasource-okhttp:$rootProject.ext.media3Version" // Custom HTTP
 
   // Misc
-  implementation 'androidx.core:core-ktx:1.7.0'
-  implementation 'androidx.appcompat:appcompat:1.4.1'
+  implementation 'androidx.core:core-ktx:1.8.0'
+  implementation 'androidx.appcompat:appcompat:1.4.2'
   implementation 'androidx.media:media:1.6.0'
   implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
@@ -42,12 +42,12 @@ dependencies {
 }
 
 android {
-  compileSdkVersion 31
+  compileSdkVersion 32
 
   defaultConfig {
     applicationId "com.devbrackets.android.exomediademo"
     minSdkVersion 21
-    targetSdkVersion 31
+    targetSdkVersion 32
     versionCode 1
     versionName "1.0.0"
   }
