--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 ext {
-  composeVersion = "1.1.1"
+  composeVersion = "1.2.1"
 }
 
 dependencies {
@@ -14,7 +14,7 @@ dependencies {
 
   // Misc
   implementation 'androidx.core:core-ktx:1.8.0'
-  implementation 'androidx.appcompat:appcompat:1.4.2'
+  implementation 'androidx.appcompat:appcompat:1.5.0'
   implementation 'androidx.media:media:1.6.0'
   implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
@@ -25,9 +25,9 @@ dependencies {
   implementation "androidx.compose.material:material:$composeVersion"
   implementation "androidx.compose.material:material-icons-core:$composeVersion"
   implementation "androidx.compose.material:material-icons-extended:$composeVersion"
-  implementation 'androidx.activity:activity-compose:1.4.0'
-  implementation "androidx.navigation:navigation-compose:2.4.2"
-  implementation "com.google.accompanist:accompanist-navigation-animation:0.23.1"
+  implementation 'androidx.activity:activity-compose:1.5.1'
+  implementation "androidx.navigation:navigation-compose:2.5.1"
+  implementation "com.google.accompanist:accompanist-navigation-animation:0.25.1"
 
 
   // Image Loading
@@ -57,13 +57,7 @@ android {
   }
 
   kotlinOptions {
-    useIR = true
-    jvmTarget = JavaVersion.VERSION_1_8.toString()
-    freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
-    freeCompilerArgs += [
-        "-P",
-        "plugin:androidx.compose.compiler.plugins.kotlin:suppressKotlinVersionCompatibilityCheck=true"
-    ]
+    jvmTarget = JavaVersion.VERSION_1_8
   }
 
   buildFeatures {
@@ -77,7 +71,7 @@ android {
   }
 
   composeOptions {
-    kotlinCompilerExtensionVersion composeVersion
+    kotlinCompilerExtensionVersion "1.3.0"
   }
 
   lint {
