--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -2,7 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 ext {
-  composeVersion = "1.2.1"
+  composeVersion = "1.3.1"
+  composeUiVersion = "1.3.2"
 }
 
 dependencies {
@@ -14,20 +15,20 @@ dependencies {
 
   // Misc
   implementation 'androidx.core:core-ktx:1.9.0'
-  implementation 'androidx.appcompat:appcompat:1.5.1'
+  implementation 'androidx.appcompat:appcompat:1.6.0'
   implementation 'androidx.media:media:1.6.0'
   implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
   // Jetpack Compose UI
-  implementation "androidx.compose.ui:ui:$composeVersion"
-  implementation "androidx.compose.ui:ui-tooling:$composeVersion"
-  implementation "androidx.compose.ui:ui-tooling-preview:$composeVersion"
+  implementation "androidx.compose.ui:ui:$composeUiVersion"
+  implementation "androidx.compose.ui:ui-tooling:$composeUiVersion"
+  implementation "androidx.compose.ui:ui-tooling-preview:$composeUiVersion"
   implementation "androidx.compose.material:material:$composeVersion"
   implementation "androidx.compose.material:material-icons-core:$composeVersion"
   implementation "androidx.compose.material:material-icons-extended:$composeVersion"
-  implementation 'androidx.activity:activity-compose:1.6.0'
-  implementation "androidx.navigation:navigation-compose:2.5.2"
-  implementation "com.google.accompanist:accompanist-navigation-animation:0.25.1"
+  implementation 'androidx.activity:activity-compose:1.6.1'
+  implementation "androidx.navigation:navigation-compose:2.5.3"
+  implementation "com.google.accompanist:accompanist-navigation-animation:0.28.0"
 
 
   // Image Loading
@@ -71,7 +72,7 @@ android {
   }
 
   composeOptions {
-    kotlinCompilerExtensionVersion "1.3.0"
+    kotlinCompilerExtensionVersion "1.3.2"
   }
 
   lint {
