--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,14 @@ import org.gradle.internal.logging.text.StyledTextOutputFactory
 import static org.gradle.internal.logging.text.StyledTextOutput.Style
 
 buildscript {
-  ext.kotlinVersion = '1.7.20'
+  ext.kotlinVersion = '1.8.10'
   repositories {
     mavenCentral()
     google()
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:7.4.1'
+    classpath 'com.android.tools.build:gradle:7.4.2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
   }
 }
@@ -20,7 +20,7 @@ plugins {
 
 ext {
   moduleTestResults = []
-  media3Version = "1.0.0-beta03"
+  media3Version = "1.0.0-rc02"
 }
 
 
