--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -26,8 +26,8 @@ dependencies {
   implementation "androidx.compose.material:material:$composeVersion"
   implementation "androidx.compose.material:material-icons-core:$composeVersion"
   implementation "androidx.compose.material:material-icons-extended:$composeVersion"
-  implementation 'androidx.activity:activity-compose:1.7.1'
-  implementation "androidx.navigation:navigation-compose:2.5.3"
+  implementation 'androidx.activity:activity-compose:1.7.2'
+  implementation "androidx.navigation:navigation-compose:2.6.0"
   implementation "com.google.accompanist:accompanist-navigation-animation:0.30.1"
 
 
@@ -58,7 +58,7 @@ android {
   }
 
   kotlinOptions {
-    jvmTarget = JavaVersion.VERSION_17
+    jvmTarget = JavaVersion.VERSION_1_8
   }
 
   buildFeatures {
@@ -67,8 +67,8 @@ android {
   }
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_17
-    targetCompatibility JavaVersion.VERSION_17
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
   }
 
   composeOptions {
