* Updated Media3 to `1.1.0` * Removed the pre-release definition from the version (now 5.0.0)

--- a/libraryInfo.properties
+++ b/libraryInfo.properties
@@ -4,4 +4,4 @@ GROUP_ID = com.devbrackets.android
 VERSION_MAJOR = 5
 VERSION_MINOR = 0
 VERSION_PATCH = 0
-VERSION_PRE_RELEASE = beta01
+VERSION_PRE_RELEASE =
