--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
 
     <application
         android:allowBackup="false"
@@ -35,6 +36,7 @@
 
         <service
             android:name="com.devbrackets.android.exomediademo.playlist.service.MediaService"
+            android:foregroundServiceType="mediaPlayback"
             android:enabled="true"
             android:exported="false">
         </service>
